frontend/src/css/app.sass
// app global css in Sass form

// Headers
@font-face
  font-family: headerBlack
  src: url(./fonts/Montserrat/Montserrat-Black.ttf)

.header-black
  font-family: 'headerBlack'

@font-face
  font-family: headerBold
  src: url(./fonts/Montserrat/Montserrat-Bold.ttf)
.header-bold
  font-family: 'headerBold'

@font-face
  font-family: header
  src: url(./fonts/Montserrat/Montserrat-Regular.ttf)
.header
  font-family: 'header'

// Body
@font-face
  font-family: bodyBold
  src: url(./fonts/Montserrat/Montserrat-Bold.ttf)
.body-bold
  font-family: 'bodyBold'

@font-face
  font-family: bodyItalic
  src: url(./fonts/Montserrat/Montserrat-Italic.ttf)
.body-italic
  font-family: 'bodyItalic'

@font-face
  font-family: body
  src: url(./fonts/Montserrat/Montserrat-Regular.ttf)
.body, div, p
  font-family: 'body'

.code
  font-family: monospace

// Color classes
.primary
  color: $primary
.primaryreg
  color: $primaryreg
.primarylight
  color: $primarylight
.secondary
  color: $secondary
.accent
  color: $accent

.dark
  color: $dark
.light
  color: $light
.darkestgrey
  color: $darkestgrey
.darkgrey
  color: $darkgrey
.lightgrey
  color: $lightgrey

.positive
  color: $positive
.negative
  color: $negative
.info
  color: $info
.warning
  color: $warning

h1, h2, h3, h4, h5, h6
  margin-bottom: 0
h4, h5
  margin-top: 0
p, div
  hyphens: manual
  text-align: left

// Generic
.page-title
  @extend .header-black
  margin-top: 2rem
  margin-bottom: 4rem
  text-align: center

  @media (max-width: $breakpoint-sm-max)
    font-size: 3rem

.form
  max-width: 475px
  margin: 0 auto

.form-wide
  // Slightly wider form to ensure withdrawal addresses and private keys don't wrap on the receive table
  max-width: 525px
  margin: 0 auto

.form-extra-wide
  // Used only on the FAQ page for now
  max-width: 600px
  margin: 0 auto

.horizontal-center
  margin: 0 auto

// Dark mode config
.body--light
  .dark-toggle
    color: $dark

  .bg-muted
    background: $lightestgrey

  .text-muted
    color: $lightgrey

  .hyperlink
    color: $primarydark
    text-decoration: underline
    cursor: pointer
    display: inline-block

  .separator
    border-bottom: 1px solid rgba(0, 0, 0, 0.2)

  .code-grey
    color: grey
  .code-blue
    color: #0077aa
  .code-green
    color: #669900
  .code-pink
    color: #dd4a68

.body--dark
  .dark-toggle
    color: $light

  .bg-muted
    background: $darkestgrey

  .text-muted
    color: $darkgrey

  .hyperlink
    color: $primaryreg
    text-decoration: underline
    cursor: pointer
    display: inline-block

  .separator
    border-bottom: 1px solid rgba(255, 255, 255, 0.2)

  .code-grey
    color: grey
  .code-blue
    color: #42c6ff
  .code-green
    color: #ddff99
  .code-pink
    color: #eda1b0

// Set max width for all content
.all-content-format
  max-width: 1023px
  margin: 0 auto

// Card formatting
.card-border
  border-width: 1px
  border-style: solid
  border-color: $lightgrey

.card-border:hover
  border-width: 1px
  border-style: solid
  border-color: $primary

.no-text-decoration
  text-decoration: none

.d-inline-block
  display: inline-block

.border-top-thick
  border-top: 5px solid $primary

.border-warning
  border: 1px solid $warning
  border-radius: 10px

